--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -660,3 +660,22 @@ footer .person1 {
   background-color: #555; /* Add a dark-grey background on hover */
 
 }
+
+
+  /* Add this CSS code to your existing styles */
+
+  .colorful-icon i.devicon-c-plain-wordmark {
+    color: #f53f2b; /* Change this color to your desired color for C */
+  }
+
+  .colorful-icon i.devicon-cplusplus-plain-wordmark {
+    color: #3b7ab8; /* Change this color to your desired color for C++ */
+  }
+
+  .colorful-icon i.devicon-python-plain-wordmark {
+    color: #f9cb3e; /* Change this color to your desired color for Python */
+  }
+
+  .colorful-icon i.devicon-java-plain-wordmark {
+    color: #007396; /* Change this color to your desired color for Java */
+  }
