--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,8 +7,7 @@
   scroll-behavior: smooth;
   max-width: 98vw !important;
   scroll-behavior: smooth;
-  background: image("./img/white_bg.jpg");                /*www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com*/
-
+  background: image("./img/white_bg.jpg");
 }
 
 .nav-spacing{
@@ -584,7 +583,7 @@ footer .person1 {
   color: #ffffff;
   font-size: xx-large;
 }
-/*# sourceMappingURL=main.css.map */
+
 .connect {
   display: flex;
   flex-direction: column;
@@ -641,28 +640,24 @@ footer .person1 {
 }
 
 #myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
 }
 
 #myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-
+  background-color: #555;
 }
-
-
-  /* Add this CSS code to your existing styles */
 
   .colorful-icon i.devicon-c-plain-wordmark {
     color: #f53f2b; /* Change this color to your desired color for C */
@@ -679,21 +674,17 @@ footer .person1 {
   .colorful-icon i.devicon-java-plain-wordmark {
     color: #007396; /* Change this color to your desired color for Java */
   }
-
-
-
-
   /* Box 3 Css Not working properly */
   .about .card-wrapper .box3 ul {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center; /* Align items to the center */
-    flex-wrap: wrap; /* Allow items to wrap to a new line */
+    align-items: center;
+    flex-wrap: wrap;
   }
   
   .about .card-wrapper .box3 ul li {
-    width: 33%; /* Adjust the width as needed */
+    width: 33%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -703,13 +694,6 @@ footer .person1 {
   .about .card-wrapper .box3 ul li span {
     font-weight: bold;
   }
-
-  
-
-
-
-
-
 
   .container {
     display: flex;
@@ -751,4 +735,3 @@ footer .person1 {
   .ContactColour a:hover {
     color: #f53f2b;
   }
-  
